--- a/BackEnd/testAPI.html
+++ b/BackEnd/testAPI.html
@@ -14,7 +14,7 @@
 <script>
 
     async function testAPI() {
-        const url = 'http://127.0.0.1:5000/login';
+        const url = 'http://127.0.0.1:5000/usuario/login';
         const data = {
             "usuario": "alberto",
             "clave": "alberto123"
